tests/urmoac/errors/net_issues/duplicate_edge_id/d2r_output.urmoac
2000;10000;450.00;10.00;-200.00;0.00;-200.00;-10.00
2001;10000;350.00;10.00;-100.00;0.00;-100.00;10.00
2002;10000;250.00;0.00;0.00;0.00;0.00;0.00
2003;10000;150.00;10.00;100.00;0.00;100.00;-10.00
2004;10000;50.00;10.00;200.00;0.00;200.00;10.00
